[package]
name = "grammar"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Daniel Liu <139250065@qq.com>"]
description = "grammar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "log2"
path = "src/nginx_log2.rs"

[[bin]]
name = "json"
path = "src/json.rs"

[[bin]]
name = "json2"
path = "src/json2.rs"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
pest = { version = "2.7.11", features = ["pretty-print"] }
pest_derive = "2.7.11"
regex = "1.10.5"
rhai = { version = "1.19.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
winnow = { version = "0.6.16", features = ["simd"] }
